<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_login_container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="15dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/facebook_login_recommendation" />

    <Button
        android:id="@+id/b_facebook_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/button_login"
        android:text="@string/login_with_facebook"
        android:textColor="#fff"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:text="@string/facebook_login_promise" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:text="@string/or" />


    <Button
        android:id="@+id/b_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/shopafterPink"
        android:text="@string/sign_up_with_email"
        android:textColor="@color/white" />
</LinearLayout>